# web_postgres_compared_with_nodejs_and_rust_on_raspberry_pi4

./: README.md  db.sql  results.md
node_posts/: .env.example  ecosystem.js  main.js  package-lock.json  package.json
rust_posts/: .env.example  Cargo.toml
rust_posts/src/: main.rs
