[package]
name = "rust_posts"
version = "0.1.0"
authors = ["Rico Chen <midnightcodr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
actix-web = "3"
serde_json = "1.0.64"
config = "0.10.1"
deadpool-postgres = "0.5.0"
derive_more = "0.99.2"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
tokio-postgres = "0.5.1"